add release profiles

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,9 @@ edition = "2021"
 
 [dependencies]
 tokio = { version = "1", features = ["full"] } #, "tracing"
+
+[profile.release]
+lto = true
+codegen-units = 1
+strip=true
+panic = 'abort'
