--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 tokio = { version = "1", features = ["full"] } #, "tracing"
+sysinfo = "0.30.12"
 
 [profile.release]
 lto = true
